--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-icons": "^5.0.1",
     "react-scripts": "5.0.1",
     "socket.io-client": "^4.7.4",
+    "universal-cookie": "^7.1.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
